<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">AchaSiga</string>
    <string name="yes">OK</string>
    <string name="no">Cancel</string>
    <string name="app_permissions_title">Used permission</string>
    <string name="app_permissions">

        &lt;i>Access Storage Permission:&lt;/i>&lt;br>
        &#8226; Diary: backup and restore to/from sd-card.&lt;br>
        &#8226; Goal: load and save images for your personal goal.&lt;br>&lt;br>

        &lt;i>Grant permissions later:&lt;/i>&lt;br>
        If you don\'t permit this now, you can do it later. Please open then \"Settings -> App info\" and choose \"Permissions\".</string>
    <string name="share_text">Great news: I haven\'t smoked since</string>
    <string name="share_text_fail">I failed stop smoking after</string>
    <string name="share_text2">and</string>
    <string name="share_text3">I saved:</string>
    <string name="share_text4">cigarettes</string>
    <string name="share_text5">and</string>
    <string name="share_text6">of time.</string>
    <string name="share_subject">I stopped smoking</string>
    <string name="reset_confirm">Reset the time and create a diary entry?</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="action_health">Health</string>
    <string name="action_overview">Overview</string>
    <string name="action_diary">Diary</string>
    <string name="action_goal">Goal</string>
    <string name="action_save">Save</string>
    <string name="action_reset">Reset</string>
    <string name="action_info">Info</string>
    <string name="choose_camera">Camera</string>
    <string name="choose_gallery">Gallery</string>
    <string name="not_set">Configure in settings</string>
    <string name="not_set2">0.0</string>
    <string name="money_euro">€</string>
    <string name="money_dollar">$</string>
    <string name="money_pound">£</string>
    <string name="money_yen">¥</string>
    <string name="time_days">days</string>
    <string name="time_hours">hours</string>
    <string name="time_minutes">minutes</string>
    <string name="last_time_date">Stopped smoking at:</string>
    <string name="last_since">Not smoked since:</string>
    <string name="stat">Saved:</string>
    <string name="stat_h">h</string>
    <string name="health_congratulations">Congratulations - you did it!</string>
    <string name="health_reached">Reached in:</string>
    <string name="health_header1">Blood pressure</string>
    <string name="health_description1">Blood pressure, body temperature and heart rate return to normal. (20 minutes)</string>
    <string name="health_header2">Carbon monoxide</string>
    <string name="health_description2" tools:ignore="StringFormatCount">Smoker\'s breath disappears. For a smoker, about 10% of
        the red blood cells are blocked by the poisonous gas carbon monoxide. These cells are now available again for oxygen.
        (8 hours)</string>
    <string name="health_header3">Heart attack</string>
    <string name="health_description3">The risk of death by sudden cardiac arrest decreases. (1 day)</string>
    <string name="health_header4">Sense of smell</string>
    <string name="health_description4">Your sense of smell and taste buds become more sensitive; smelling
         and taste is refined. (2 days)</string>
    <string name="health_header5">Breathing</string>
    <string name="health_description5">Breathing becomes easier. (3 days)</string>
    <string name="health_header6">Nicotine withdrawal</string>
    <string name="health_description6">The physical withdrawal from nicotine is made. (1 week)</string>
    <string name="health_header7">Capacity</string>
    <string name="health_description7">The entire blood circulation improves. Increased lung capacity is
         up by 30 %, The lungs can once more absorb more oxygen. This add an increase to physical performance. (3 months)</string>
    <string name="health_header8">Lung hairs</string>
    <string name="health_description8">By now, the fine hairs in the lungs are regrown and smokers cough
        disappears. Exhaustion and shortness of breath improve progressively. (9 months)</string>
    <string name="health_header9">Coronary arteries</string>
    <string name="health_description9">The risk of diseases of the coronary vessels is reduced by half.
        (1 year)</string>
    <string name="health_header10">Heart attack</string>
    <string name="health_description10">The risk of heart attack drops significantly. (2 years)</string>
    <string name="health_header11">Stroke</string>
    <string name="health_description11">The risk of having a stroke or developing lung cancer
         is substantially lower than earlier. Also, the risk of mouth cancer is
         reduced. (5 years)</string>
    <string name="health_header12">Lung cancer</string>
    <string name="health_description12">The risk of lung cancer is the same as a non-smoker. The lungs
         have almost fully recovered. Pre-cancerous cells are replaced by healthy cells. (10 years)</string>
    <string name="health_header13">Heart attack</string>
    <string name="health_description13">The risk of heart attack is barely higher than that of a Non-smoker. (15 years)</string>
    <string name="action_backup">Backup diary</string>
    <string name="action_restore">Restore diary</string>
    <string name="action_delete">Delete diary</string>
    <string name="note_remove_confirmation">Entry will be removed. OK?</string>
    <string name="note_remove_note">Delete entry</string>
    <string name="note_edit">Edit entry</string>
    <string name="note_share">Share entry</string>
    <string name="note_share_2">Share with:</string>
    <string name="title_hint">Title</string>
    <string name="text_hint">Content</string>
    <string name="toast_extension">No supported file extension</string>
    <string name="toast_install_app">Please install an app to perform action.</string>
    <string name="note_attachment">Attachment</string>
    <string name="text_tit_1">Neutral</string>
    <string name="text_tit_2">Happy</string>
    <string name="text_tit_3">Sad</string>
    <string name="text_tit_4">Smiling</string>
    <string name="text_tit_5">Cool</string>
    <string name="text_tit_6">Dead</string>
    <string name="text_tit_7">Excited</string>
    <string name="text_tit_8">Tongue</string>
    <string name="text_tit_9">Devil</string>
    <string name="toast_backup">Backup successful.</string>
    <string name="toast_restore">Restore successful.</string>
    <string name="toast_backup_not">Backup failed.</string>
    <string name="toast_restore_not">Restore failed.</string>
    <string name="toast_save">Entry not saved. Cancel editing?</string>
    <string name="paste_date">Paste actual date</string>
    <string name="paste_time">Paste actual time</string>
    <string name="paste_line">Paste line</string>
    <string name="action_sort">Sort entries</string>
    <string name="action_sort_title">Sort by title</string>
    <string name="action_sort_icon">Sort by emoticon</string>
    <string name="action_sort_create">Sort by date</string>
    <string name="choose_att">Choose attachment</string>
    <string name="choose_title">File manager</string>
    <string name="goal_cancel">Cancel</string>
    <string name="action_image">Picture</string>
    <string name="action_imageLoad">Choose image</string>
    <string name="action_imageRotate">Rotate image</string>
    <string name="costs">Costs:</string>
    <string name="alreadySaved">Already saved:</string>
    <string name="costsRemaining">Remaining:</string>
    <string name="settings_category_0">Tabs</string>
    <string name="settings_category_1">Statistics</string>
    <string name="settings_category_2">Goal tab</string>
    <string name="settings_category_3">App</string>
    <string name="settings_goalDate">Next goal</string>
    <string name="settings_tab_overview">Overview tab</string>
    <string name="settings_tab_health">Health tab</string>
    <string name="settings_tab_goal">Goal tab</string>
    <string name="settings_tab_diary">Diary tab</string>
    <string name="settings_goalDate_summary">If you have reached your current goal, you can set here a start date for your next goal. This
        is necessary to calculate the new time of when you reach the next goal, while keeping the right statistics in the
        overview tab.</string>
    <string name="settings_tab_overview_summary">Do you want to use the overview tab? In this tab the main statistics are presented:
        the time of quitting, saved cigarettes, saved money and so on.</string>
    <string name="settings_tab_health_summary">Do you want to use the health tab? In this tab the progress of your health benefits are
        presented: risk oh heart attack, cancer and so on.</string>
    <string name="settings_tab_goal_summary">Do you want to use the goal tab? Here you can set a personal goal. Something you want to use the
        saved money for.</string>
    <string name="settings_tab_diary_summary">Do you want to use the diary tab? Here you can write a diary with your thoughts,
        problems and something like this. Perhaps it will help you.</string>
    <string name="a_goal">Personal goal</string>
    <string name="a_goal_summary">What will you use the saved money for? Please enter a title and the costs of your personal goal.</string>
    <string name="settings_goalTitle_hint">Name of your goal</string>
    <string name="settings_goalCosts_hint">Costs (integer number): 199</string>
    <string name="settings_costs">Costs</string>
    <string name="settings_costs_summary">Costs of a single cigarette. This is used to calculate the saved money since quitting.</string>
    <string name="settings_cost_hint">What does one cigarette cost?</string>
    <string name="settings_currency">Currency</string>
    <string name="settings_currency_summary">Set your preferred currency</string>
    <string name="a_cig">Smoke habits</string>
    <string name="a_cig_summary">Enter the number of cigarettes smoked per day and the time it takes to smoke one cigarette.</string>
    <string name="a_cig_hintNumb">Number of cigarettes</string>
    <string name="a_cig_hintTime">Time in minutes</string>
    <string name="a_time">Time</string>
    <string name="a_time_summary">When did you stop smoking? Please enter a date and time.</string>
    <string name="a_dateFormat">Date format</string>
    <string name="a_dateFormat_summary">Set your preferred date format.</string>
    <string name="a_openSettings">App info</string>
    <string name="a_openSettings_summary">Open via the system settings the app info. There you can,
        depending on your Android version, manage several things (Storage, network traffic, permissions, …).</string>
    <string name="toast_newTitle">Title already exists.</string>
    <string name="toast_notSave">Can not save entry.</string>
    <string name="toast_directory">Can\'t open Directory.</string>
    <string name="toast_files">No files in directory.</string>
    <string name="toast_delete">All entries will be deleted.</string>
    <string name="action_filter">Search</string>
    <string name="action_filter_title">Search in titles</string>
    <string name="action_filter_cont">Search in content</string>
    <string name="action_filter_create">Search in dates</string>
    <string name="filter_today">Today</string>
    <string name="filter_yesterday">Yesterday</string>
    <string name="filter_before">Day before yesterday</string>
    <string name="filter_month">This month</string>
    <string name="filter_own">Own search</string>
    <string name="sort_title">title</string>
    <string name="sort_date">date</string>
    <string name="sort_pri">emoticon</string>
    <string name="about_settings">About … and other things</string>
    <string name="about_settings_text">Changelog, help, license, used libraries and more.</string>
</resources>