<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/settings_category_0">

        <CheckBoxPreference
            android:title="@string/settings_tab_overview"
            android:icon="@drawable/chart_bar"
            android:summary="@string/settings_tab_overview_summary"
            android:key="tab_overview"
            android:defaultValue="true" />

        <CheckBoxPreference
            android:title="@string/settings_tab_health"
            android:icon="@drawable/heart_pulse"
            android:summary="@string/settings_tab_health_summary"
            android:key="tab_health"
            android:defaultValue="true" />

        <CheckBoxPreference
            android:title="@string/settings_tab_goal"
            android:icon="@drawable/trophy_award"
            android:summary="@string/settings_tab_goal_summary"
            android:key="tab_goal"
            android:defaultValue="true" />

        <CheckBoxPreference
            android:title="@string/settings_tab_diary"
            android:icon="@drawable/book_open_page_variant"
            android:summary="@string/settings_tab_diary_summary"
            android:key="tab_diary"
            android:defaultValue="true" />


    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_category_1">

        <ListPreference
            android:title="@string/a_dateFormat"
            android:icon="@drawable/calendar_question"
            android:summary="@string/a_dateFormat_summary"
            android:key="dateFormat"
            android:defaultValue="1"
            android:entries="@array/listDate"
            android:entryValues="@array/listValuesDate" />

        <Preference
            android:title="@string/a_time"
            android:icon="@drawable/timer"
            android:key="time"
            android:summary="@string/a_time_summary" />

        <Preference
            android:title="@string/a_cig"
            android:icon="@drawable/smoking"
            android:key="cig"
            android:summary="@string/a_cig_summary" />

        <ListPreference
            android:title="@string/settings_currency"
            android:summary="@string/settings_currency_summary"
            android:icon="@drawable/currency_usd"
            android:key="currency"
            android:defaultValue="1"
            android:entries="@array/listCurrency"
            android:entryValues="@array/listValuesCurrency" />

        <Preference
            android:title="@string/settings_costs"
            android:icon="@drawable/wallet"
            android:key="costs"
            android:summary="@string/settings_costs_summary" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_category_2">

        <Preference
            android:title="@string/a_goal"
            android:icon="@drawable/trophy_award"
            android:summary="@string/a_goal_summary"
            android:key="goalTitle" />

        <Preference
            android:title="@string/settings_goalDate"
            android:icon="@drawable/arrow_right"
            android:key="goalDate"
            android:summary="@string/settings_goalDate_summary" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_category_3">

        <Preference
            android:title="@string/a_openSettings"
            android:icon="@drawable/settings"
            android:summary="@string/a_openSettings_summary"
            android:key="clearCache" />

        <Preference
            android:title="@string/about_settings"
            android:icon="@drawable/information_outline"
            android:summary="@string/about_settings_text"
            android:key="license" />

    </PreferenceCategory>

</PreferenceScreen>