<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal">

        <TextView
            android:id="@+id/text_date"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/last_time_date"
            android:gravity="center_vertical|center_horizontal"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorAccent"
            android:layout_alignParentTop="false"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="@dimen/space_normal" />

        <TextView
            android:id="@+id/text_date2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/not_set"
            android:gravity="center_vertical|center_horizontal"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_below="@+id/text_date"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/text_date3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/not_set"
            android:gravity="center_vertical|center_horizontal"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_below="@+id/text_date2"
            android:layout_marginBottom="@dimen/space_bottom" />

        <TextView
            android:id="@+id/text_time"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/last_since"
            android:gravity="center_vertical|center_horizontal"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorAccent"
            android:layout_below="@+id/text_date3"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="@dimen/space_normal"
            android:layout_marginTop="@dimen/space_bottom"/>

        <TextView
            android:id="@+id/text_time2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/not_set"
            android:gravity="center_vertical|center_horizontal"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_below="@+id/text_time" />

        <TextView
            android:id="@+id/text_time3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/not_set"
            android:gravity="center_vertical|center_horizontal"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_below="@+id/text_time2" />

        <TextView
            android:id="@+id/text_time4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/not_set"
            android:gravity="center_vertical|center_horizontal"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_below="@+id/text_time3"
            android:layout_marginBottom="@dimen/space_bottom" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/stat"
            android:gravity="center_vertical|center_horizontal"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorAccent"
            android:layout_below="@+id/text_time4"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="@dimen/space_normal"
            android:layout_marginTop="@dimen/space_bottom"/>

        <LinearLayout
            android:id="@+id/icons"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical|center_horizontal"
            android:layout_marginBottom="@dimen/space_normal"
            android:layout_below="@+id/textView3">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="24dp"
                app:srcCompat="@drawable/smoking_off"
                android:scaleType="fitCenter"
                tools:ignore="ContentDescription"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"/>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="24dp"
                android:id="@+id/imageView"
                app:srcCompat="@drawable/wallet"
                android:scaleType="fitCenter"
                tools:ignore="ContentDescription"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"/>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="24dp"
                app:srcCompat="@drawable/timer"
                android:scaleType="fitCenter"
                tools:ignore="ContentDescription"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical|center_horizontal"
            android:layout_below="@+id/icons">

            <TextView
                android:id="@+id/text_cigs2"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/not_set2"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"/>

            <TextView
                android:id="@+id/text_cigs2_cost"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/not_set2"
                android:gravity="center_vertical|center_horizontal"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp" />

            <TextView
                android:id="@+id/text_duration"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/not_set2"
                android:gravity="center_vertical|center_horizontal"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp" />

        </LinearLayout>

    </RelativeLayout>

</ScrollView>