<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="de.baumann.quitsmoking.MainActivity"
        android:foregroundGravity="center"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="false"
        android:layout_alignParentBottom="false"
        android:layout_centerInParent="true"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="20dp"
                app:passwordToggleEnabled="false"
                android:layout_toStartOf="@+id/imageButtonPaste">

                <EditText
                    android:id="@+id/note_title_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title_hint"
                    android:inputType="textCapSentences|textMultiLine" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_cont"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_width="match_parent"
                android:layout_below="@+id/layout_title"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="false">

                <EditText
                    android:id="@+id/note_text_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_hint"
                    android:inputType="textCapSentences|textMultiLine" />

            </android.support.design.widget.TextInputLayout>

            <ImageButton
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:id="@+id/imageButtonPri"
                app:srcCompat="@drawable/emoticon_neutral"
                android:background="?android:selectableItemBackground"
                tools:ignore="ContentDescription"
                android:scaleType="fitCenter"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_alignTop="@+id/layout_title"
                android:layout_alignEnd="@+id/layout_cont" />

            <Button
                android:text="@string/choose_att"
                android:layout_below="@+id/layout_cont"
                android:layout_width="wrap_content"
                android:layout_height="46dp"
                android:id="@+id/button_att"
                android:background="?android:selectableItemBackground"
                android:layout_alignStart="@+id/layout_cont"
                android:layout_toStartOf="@+id/button_cam"
                android:gravity="center_vertical"
                android:layout_marginStart="4dp" />


            <ImageButton
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:id="@+id/button_rem"
                app:srcCompat="@drawable/close_red"
                android:background="?android:selectableItemBackground"
                tools:ignore="ContentDescription"
                android:scaleType="fitCenter"
                android:layout_alignBottom="@+id/button_att"
                android:layout_alignEnd="@+id/layout_cont"
                android:layout_alignTop="@+id/button_att" />

            <ImageButton
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:id="@+id/button_cam"
                app:srcCompat="@drawable/image"
                android:background="?android:selectableItemBackground"
                tools:ignore="ContentDescription"
                android:scaleType="fitCenter"
                android:layout_alignBottom="@+id/button_att"
                android:layout_alignEnd="@+id/layout_cont"
                android:layout_alignTop="@+id/button_att" />

            <ImageButton
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginEnd="16dp"
                android:id="@+id/imageButtonPaste"
                app:srcCompat="@drawable/timer"
                android:background="?android:selectableItemBackground"
                tools:ignore="ContentDescription"
                android:scaleType="fitCenter"
                android:layout_alignTop="@+id/imageButtonPri"
                android:layout_toStartOf="@+id/imageButtonPri" />

        </RelativeLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>